# biome

./: .bldr.toml  .forkman.yaml  .gitattributes  .gitignore  CHANGELOG.md  COPYRIGHT.md  Cargo.toml  Dockerfile  END_TO_END_TESTING.md  Makefile  README.md  build.ps1  docker-compose.yml  rustfmt.toml
components/bio/: Cargo.toml  install-linux.sh
components/bio/biome/: plan.ps1  plan.sh
components/bio/biome/aarch64-darwin/: plan.sh
components/bio/biome/x86_64-darwin/: README.md  plan.sh
components/bio/habitat/: plan.ps1  plan.sh
components/bio/habitat/aarch64-darwin/: plan.sh
components/bio/habitat/x86_64-darwin/: plan.sh
components/bio/src/: cli.rs  cli_v4.rs  error.rs  exec.rs  gateway_util.rs  key_type.rs  lib.rs  license.rs  main.rs  main_v2.rs  main_v4.rs  scaffolding.rs
components/bio/src/cli/: bio.rs
components/bio/src/cli/bio/: bldr.rs  cli.rs  origin.rs  pkg.rs  sup.rs  svc.rs  tests.rs  util.rs
components/bio/src/cli_v4/: bldr.rs  cli.rs  config.rs  file.rs  license.rs  origin.rs  pkg.rs  plan.rs  ring.rs  studio.rs  sup.rs  supportbundle.rs  svc.rs  user.rs  utils.rs
components/bio/src/cli_v4/bldr/: channel.rs
components/bio/src/cli_v4/cli/: completers.rs  setup.rs
components/bio/src/cli_v4/config/: apply.rs  show.rs
components/bio/src/cli_v4/file/: upload.rs
components/bio/src/cli_v4/origin/: create.rs  delete.rs  depart.rs  info.rs  invitations.rs  key.rs  rbac.rs  transfer.rs
components/bio/src/cli_v4/pkg/: binds.rs  binlink.rs  build.rs  bulk_upload.rs  channels.rs  config.rs  delete.rs  demote.rs  dependencies.rs  download.rs  env.rs  exec.rs  export.rs  hash.rs  header.rs  info.rs  (+10 more)
components/bio/src/command/: config.rs  file.rs  launcher.rs  studio.rs  sup.rs  supportbundle.rs
components/bio/static/: template_README.md  template_plan.ps1  template_plan.sh
components/bio/tests/: test_migrate_script.bats  test_migrate_script.ps1
components/builder-api-client/: Cargo.toml
components/builder-api-client/src/: builder.rs  error.rs  lib.rs  response.rs
components/butterfly/: Cargo.toml  build.rs
components/butterfly/protocols/: swim.proto
components/butterfly/src/: client.rs  error.rs  lib.rs  main.rs  member.rs  message.rs  probe_list.rs  rumor.rs  server.rs  swim.rs
components/butterfly/src/protocol/: newscast.rs  swim.rs
components/butterfly/src/rumor/: dat_file.rs  departure.rs  election.rs  heat.rs  service.rs  service_config.rs  service_file.rs
components/butterfly/src/server/: expire.rs  inbound.rs  incarnation_store.rs  outbound.rs  pull.rs  push.rs  timing.rs
components/butterfly/tests/: integration.rs
components/butterfly/tests/common/: mod.rs
components/butterfly/tests/encryption/: mod.rs
components/butterfly/tests/rumor/: departure.rs  election.rs  service.rs  service_config.rs  service_file.rs
components/launcher-client/: Cargo.toml
components/launcher-client/src/: client.rs  error.rs  lib.rs
components/launcher-protocol/: Cargo.toml  build.rs
components/launcher-protocol/src/: error.rs  lib.rs  types.rs
components/pkg-export-container/: Cargo.toml
components/pkg-export-container/biome/: plan.ps1  plan.sh
components/pkg-export-container/defaults/: Dockerfile.hbs  Dockerfile_win.hbs
components/pkg-export-container/habitat/: plan.ps1  plan.sh
components/pkg-export-container/src/: accounts.rs  build.rs  cli.rs  container.rs  engine.rs  error.rs  graph.rs  lib.rs  main.rs  naming.rs  rootfs.rs  util.rs  value_parsers.rs
components/pkg-export-container/src/engine/: buildah.rs  docker.rs
components/pkg-export-container/src/os/: check.rs
components/pkg-export-tar/: Cargo.toml  build.rs
components/pkg-export-tar/biome/: plan.ps1  plan.sh
components/pkg-export-tar/biome/aarch64-darwin/: plan.sh
components/pkg-export-tar/habitat/: plan.ps1  plan.sh
components/pkg-export-tar/src/: build.rs  cli.rs  lib.rs  main.rs  rootfs.rs
components/rst-reader/: Cargo.toml  README.md
components/rst-reader/src/: error.rs  main.rs
components/sup/: Cargo.toml  build.rs
components/sup-client/: Cargo.toml
components/sup-client/src/: lib.rs
components/sup-protocol/: Cargo.toml  build.rs
components/sup-protocol/protocols/: types.proto
components/sup-protocol/src/: codec.rs  ctl.rs  lib.rs  net.rs  types.rs
components/sup/biome/: plan.ps1  plan.sh
components/sup/doc/: api.yaml  http_gateway_services_schema.json  render_context_schema.json  template.hbs
components/sup/habitat/: plan.ps1  plan.sh
components/sup/habitat/x86_64-linux-kernel2/: plan.sh
components/sup/protocols/: event.proto
components/sup/src/: census.rs  cli.rs  cli_common.rs  cli_tests_v4.rs  cli_v4.rs  ctl_gateway.rs  error.rs  event.rs  http_gateway.rs  lib.rs  lock_file.rs  logger.rs  main.rs  manager.rs  test_helpers.rs
components/sup/src/command/: shell.rs
components/sup/src/ctl_gateway/: acceptor.rs  handler.rs  server.rs
components/sup/src/event/: error.rs  nats_message_stream.rs  types.rs
components/sup/src/logger/: env_logger_compatibility.rs
components/sup/src/manager/: action.rs  commands.rs  file_watcher.rs  peer_watcher.rs  self_updater.rs  service.rs  service_updater.rs  spec_dir.rs  spec_watcher.rs  sup_watcher.rs  sys.rs  user_config_watcher.rs
components/sup/src/util/: pkg.rs
components/sup/static/: plan.sh
components/sup/tests/: integration.rs
components/sup/tests/fixtures/: sample_render_context.json
components/sup/tests/utils/: bio_root.rs  fixture_root.rs  fs.rs  mod.rs  test_butterfly.rs  test_helpers.rs  test_sup.rs
test-services/test-probe/: Cargo.toml  README.md
test-services/test-probe/biome/aarch64-linux/: plan.sh
test-services/test-probe/biome/x86_64-linux/: default.toml  plan.sh
test-services/test-probe/biome/x86_64-windows/: plan.ps1
test-services/test-probe/habitat/aarch64-linux/: plan.sh
test-services/test-probe/habitat/x86_64-linux/: plan.sh
test-services/test-probe/habitat/x86_64-windows/: plan.ps1
test-services/test-probe/src/: config.rs  context.rs  error.rs  main.rs
test-services/test-probe/tests/fixtures/: sample_render_context.json
(+606 files in other folders)
