[package]
name = "biome_api_client"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"

[dependencies]
broadcast = "*"
bytes = "*"
chrono = "*"
env = "*"
futures = "*"
biome_core = { path = "../core" }
biome_http_client = { path = "../http-client" }
log = "0.4"
pbr = "*"
percent-encoding = "*"
rand = "*"
regex = "*"
reqwest = { version = "*", features = ["blocking", "json", "stream"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", features = [ "preserve_order" ] }
tee = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat", "codec"] }
url = "*"
