[package]
name = "biome_butterfly"
version = "0.1.0"
edition = "2024"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "build.rs"
workspace = "../../"

[[bin]]
name = "butterfly"
path = "src/main.rs"
doc = false

[dependencies]
# Please keep these alphabetized
byteorder = "*"
bytes = "*"
env_logger = "*"
biome_common = { path = "../common" }
biome_core = { path = "../core" }
lazy_static = "*"
log = "0.4"
parking_lot = "*"
prometheus = { version = "*", default-features = false }
prost = { version = "*", features = ["derive"] }
rand = "*"
serde = { version = "*", features = ["derive", "rc"] }
serde_json = { version = "*", features = ["preserve_order"] }
tempfile = "*"
threadpool = "*"
toml = { version = "*", features = ["preserve_order"] }
uuid = { version = "*", features = ["v4"] }
zmq = "*"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["handleapi", "winbase"] }

[dev-dependencies]
mktemp = "*"

[build-dependencies]
prost-build = "*"

[features]
default = []
lock_as_rwlock = ["biome_common/lock_as_rwlock"]
lock_as_mutex = ["biome_common/lock_as_mutex"]
deadlock_detection = ["parking_lot/nightly", "parking_lot/deadlock_detection", "biome_common/deadlock_detection"]
