[package]
name = "biome-launcher-client"
version = "0.0.0"
edition = "2024"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"

[dependencies]
# Please keep these alphabetized
env_logger = "*"
biome_common = { path = "../common" }
biome_core = { path = "../core" }
biome-launcher-protocol = { path = "../launcher-protocol" }
ipc-channel = { version = "*" }
libc = "*"
log = "0.4"
prost = "*"
serde = "*"
thiserror = "*"
wincode = "*"
