[package]
name = "biome-launcher-protocol"
version = "0.0.0"
edition = "2024"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "build.rs"
workspace = "../../"

[dependencies]
bytes = "*"
prost = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }

[build-dependencies]
prost-build = "*"
