[package]
name = "biome_pkg_export_container"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "build.rs"
workspace = "../../"

[lib]
name = "biome_pkg_export_container"

[[bin]]
name = "bio-pkg-export-container"
path = "src/main.rs"
doc = false

[dependencies]
base64 = "*"
clap = { version = "4" , features = ["env", "derive", "string", "wrap_help"]}
env_logger = "*"
bio = { path = "../bio" }
biome_common = { path = "../common" }
biome_core = { path = "../core" }
# We need to lock here since v0.30.0 bumps to a version of pest that fails to build on Windows.
handlebars = { version = "0.29.1", default-features = false }
lazy_static = "*"
linked-hash-map = "*"
log = "0.4"
rusoto_core = "*"
rusoto_credential = "*"
rusoto_ecr = "*"
serde = { version = "*", features = ["rc"] }
serde_json = { version = "*", features = [ "preserve_order" ] }
tempfile = "*"
termcolor = "*"
tokio = { version = "*", features = ["full"] }
url = "*"
thiserror = "*"
anyhow = "*"

[features]
default = []
functional = []
