[package]
name = "biome_pkg_export_container"
version = "0.0.0"
edition = "2024"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "build.rs"
workspace = "../../"

[lib]
name = "biome_pkg_export_container"

[[bin]]
name = "bio-pkg-export-container"
path = "src/main.rs"
doc = false

[dependencies]
# Please keep these alphabetized
anyhow = "*"
aws-config = "*"
aws-credential-types = "*"
aws-sdk-ecr = { version = "*", default-features = false, features = ["default-https-client", "rt-tokio"] }
base64 = "*"
clap = { version = "4", features = ["env", "derive", "string", "wrap_help"] }
env_logger = "*"
bio = { path = "../bio" }
biome_common = { path = "../common" }
biome_core = { path = "../core" }
handlebars = { version = "*", default-features = false }
lazy_static = "*"
linked-hash-map = "*"
log = "0.4"
serde = { version = "*", features = ["rc"] }
serde_json = { version = "*", features = ["preserve_order"] }
tempfile = "*"
termcolor = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
url = "*"

[features]
default = []
functional = []
