[package]
name = "biome_pkg_export_tar"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"

[lib]
name = "biome_pkg_export_tar"

[[bin]]
name = "bio-pkg-export-tar"
path = "src/main.rs"
doc = false

[dependencies]
biome_common = { path = "../common" }
biome_core = { path = "../core" }

clap = { version = "4" , features = [ "derive", "wrap_help", "cargo" ] }
env_logger = { version = "*" }
log = {version = "0.4" }
mktemp = { version = "*" }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "*", features = ["backtrace"] }
tempfile = { version = "*" }
tar = { version = "*" }
flate2 = {version = "*" }
