[package]
name = "biome_pkg_export_tar"
version = "0.0.0"
edition = "2024"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"

[lib]
name = "biome_pkg_export_tar"

[[bin]]
name = "bio-pkg-export-tar"
path = "src/main.rs"
doc = false

[dependencies]
# Please keep these alphabetized
anyhow = { version = "*", features = ["backtrace"] }
clap = { version = "4", features = ["derive", "wrap_help", "cargo", "env"] }
env_logger = { version = "*" }
flate2 = { version = "*" }
biome_common = { path = "../common" }
biome_core = { path = "../core" }
log = { version = "0.4" }
mktemp = { version = "*" }
tar = { version = "*" }
tempfile = { version = "*" }
tokio = { version = "1", features = ["full"] }
