[package]
name = "biome-rst-reader"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
edition = "2018"
workspace = "../../"

[[bin]]
name = "rst-reader"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "4" , features = ["env", "derive", "string", "wrap_help"]}
env_logger = "*"
biome_butterfly = { path = "../butterfly", default-features = false }
log = "0.4"
