[package]
name = "biome-sup-client"
version = "0.0.0"
edition = "2024"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"

[dependencies]
# Please keep these alphabetized
futures = { version = "*" }
biome_common = { path = "../common" }
biome_core = { path = "../core" }
biome-sup-protocol = { path = "../sup-protocol", default-features = false }
log = "0.4"
prost = "*"
rustls = "*"
termcolor = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
