[package]
name = "biome-sup-protocol"
version = "0.0.0"
edition = "2024"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "./build.rs"
workspace = "../../"

[dependencies]
# Please keep these alphabetized
base64 = "*"
bytes = "*"
clap_v4 = { version = "4", package = "clap" }
biome_core = { path = "../core" }
lazy_static = "*"
log = "0.4"
prost = { version = "*", features = ["derive"] }
rand = { version = "0.10", features = ["thread_rng", "std_rng"] }
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

[build-dependencies]
prost-build = "*"

[dev-dependencies]
tempfile = "*"
toml = { version = "*", features = ["preserve_order"] }
