[package]
name = "biome_sup"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "./build.rs"
workspace = "../../"

[lib]
name = "biome_sup"

[[bin]]
name = "bio-sup"
path = "src/main.rs"
doc = false

[dependencies]
bytes = "*"
actix-web = { version = "4.0.0-beta.8", default-features = false, features = [ "rustls" ] }
actix-rt = "*"
byteorder = "*"
clap = { git = "https://github.com/habitat-sh/clap.git", branch = "v2-master", features = [ "suggestions", "color", "unstable" ] }
configopt = { git = "https://github.com/habitat-sh/configopt.git" }
cpu-time = "*"
derivative = "*"
fs2 = "*"
futures = "*"
glob = "*"
bio = { path = "../bio" }
biome_butterfly = { path = "../butterfly", default-features = false }
biome_common = { path = "../common" }
biome_core = { path = "../core" }
biome_api_client = { path = "../builder-api-client" }
biome_http_client = { path = "../http-client" }
biome-launcher-client = { path = "../launcher-client" }
biome-sup-protocol = { path = "../sup-protocol", default-features = false }
lazy_static = "*"
libc = "*"
log = "*"
log4rs = "*"
notify = "*"
num_cpus = "*"
parking_lot = "*"
pin-project = "*"
prometheus = "*"
prost = "*"
prost-derive = "*"
prost-types = "*"
rand = "*"
rants = { git = "https://github.com/habitat-sh/rants.git", features = ["native-tls"] }
regex = "*"
rustls = "*"
serde = { version = "*", features = ["rc"] }
serde_derive = "*"
serde_json = { version = "*", features = [ "preserve_order" ] }
serde_yaml = "*"
serde-transcode = "*"
state = "*"
structopt = { git = "https://github.com/habitat-sh/structopt.git" }
tempfile = "*"
termcolor = "*"
thiserror = "*"
anyhow = { version = "*", features = ["backtrace"] }
toml = { version = "*", features = ["preserve_order"]}
tokio = { version = "*", features = ["full"] }
tokio-rustls = "*"
tokio-util = { version = "*", features = ["full"] }
url = "*"
valico = "*"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "*"

[target.'cfg(target_family = "unix")'.dependencies]
jemallocator = "*"
jemalloc-ctl = "*"

[target.'cfg(windows)'.dependencies]
ctrlc = "*"
biome-launcher-protocol = { path = "../launcher-protocol" }
mio = { version = "*", features = ["os-ext"] }
uuid = { version = "*", features = ["v4"] }
winapi = { version = "*", features = ["namedpipeapi", "tlhelp32"] }

[dev-dependencies]
biome_core = { path = "../core" }
hyper = "*"
json = "*"
reqwest = { version = "*", features = ["json"] }

[target.'cfg(not(windows))'.dev-dependencies]
nix = "*"

[build-dependencies]
prost-build = "*"

[features]
default = []
apidocs = []
ignore_integration_tests = []
lock_as_rwlock = ["biome_common/lock_as_rwlock"]
lock_as_mutex = ["biome_common/lock_as_mutex"]
