[package]
name = "test-probe"
version = "0.1.0"
edition = "2024"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"

[dependencies]
actix-rt = "*"
actix-web = { version = "*", default-features = false, features = ["rustls-0_23"] }
clap = { version = "4", features = ["env", "derive", "string", "wrap_help"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml = "*"
